# streame

./: .gitignore  README.md  development.docker-compose.yml  go.mod  go.sum
.github/workflows/: go.yml
benchmarks/: add_static_value_test.go  filter_benchmark_test.go  inner_join_stream_table_benchmark_test.go  pebble_state_store_test.go  protobuf_serialization_test.go  rename_benchmark_test.go  schema_validation_benchmark_test.go  select_benchmark_test.go  take_benchmarks.sh
docs/: challenges.md  etcd-as-node-discovery.md  generate-sample-test-data.md
pkg/core/: config.go  config_test.go  dataframe.go  leader_election.go  leader_election_test.go  stage.go  stage_test.go  stream_dataframe.go  stream_dataframe_test.go
pkg/functions/: add_column.go  add_column_test.go  filter.go  filter_test.go  rename_column.go  rename_column_test.go  schema_validator.go  schema_validator_test.go  select.go  select_test.go
pkg/functions/join/: join.go  join_test.go  utils.go  utils_test.go
pkg/messaging/: protobuf.go  protubuf_test.go  record.pb.go  record.proto  record_grpc.pb.go  record_stream.go  record_stream_test.go  server.go
pkg/state_store/: etcd.go  etcd_test.go  in_memory.go  in_memory_test.go  pebble.go  pebble_test.go  state_store.go
pkg/types/: data_record.go  data_types.go  data_types_test.go  record.go
pkg/utils/: chan.go  chan_test.go  logger.go  test_utils.go
spark_dev_env/: README.md  devenv.nix  pyproject.toml  sample_spark.py  socket_input.py
